--- a/assets/css/klee.css
+++ b/assets/css/klee.css
@@ -6,7 +6,7 @@
 * Version  : 1.0
 * Author   : beingeorge
 * Support  : hello@beingeorge.com
-* 
+*
 ------------------*/
 
 
@@ -14,8 +14,8 @@
   [ALL CONTENTS]
 
 1. Reset.css
-2. General 
-3. Helper Classes 
+2. General
+3. Helper Classes
 4. Preloader
 5. Header
 6. About
@@ -26,7 +26,7 @@
 11. Testimony
 12. Blog
 13. Contact
-14. Footer 
+14. Footer
 15. All Media Queries
 
 ------------------*/
@@ -121,16 +121,16 @@ body {
 }
 
 a, .ease-3 {
-    -webkit-transition: all 0.3s ease-in-out 0s;
-       -moz-transition: all 0.3s ease-in-out 0s;
-        -ms-transition: all 0.3s ease-in-out 0s;
-         -o-transition: all 0.3s ease-in-out 0s;
-            transition: all 0.3s ease-in-out 0s;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+       -moz-transition: all 0.2s ease-in-out 0s;
+        -ms-transition: all 0.2s ease-in-out 0s;
+         -o-transition: all 0.2s ease-in-out 0s;
+            transition: all 0.2s ease-in-out 0s;
 }
 
-a:link, 
-a:visited, 
-a:hover, 
+a:link,
+a:visited,
+a:hover,
 a:active {
     text-decoration: none;
 }
@@ -193,9 +193,15 @@ b, strong {
     font-weight: 500;
 }
 
-/* ---------------------------------------------- 
-* 3. Helper Classes 
+/* ----------------------------------------------
+* 3. Helper Classes
 /* ---------------------------------------------- */
+
+.blog-section{
+  padding: 100px 0;
+  position: relative;
+  background-color: #1c1f2f;
+}
 
 .section {
     padding: 100px 0;
@@ -221,7 +227,7 @@ b, strong {
     padding: 15px 40px;
     font-size: 14px;
     font-weight: 400;
-    transition: all 0.5s;
+    transition: all 0.2s;
     letter-spacing: 2px;
     color: rgba(255,255,255,.5);
     box-shadow: none;
@@ -258,11 +264,11 @@ b, strong {
     border-radius: 30px;
     overflow: hidden;
     border: 1px solid #2e344d;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -ms-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s;
     /* box-shadow: 10px 10px 36px rgb(0,0,0,0.5), -13px -13px 23px rgba(255,255,255, 0.03), inset 14px 14px 70px rgb(0,0,0,0.2), inset -15px -15px 30px rgba(255,255,255, 0.04); */
     box-shadow: 10px 10px 36px rgb(0,0,0,0.5), -13px -13px 23px rgba(255,255,255, 0.03);
     border-width: 1px 0px 0 1px;
@@ -286,7 +292,7 @@ b, strong {
 }
 
 .section-head h2 {
-    font-size: 30px;
+    font-size: 40px;
     z-index: 1;
     text-transform: uppercase;
     position: relative;
@@ -339,7 +345,7 @@ b, strong {
 }
 
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 4. Preloader
 /* ---------------------------------------------- */
 
@@ -356,11 +362,11 @@ b, strong {
     justify-content: center;
     align-items: center;
     z-index: 9999;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -ms-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s;
 }
 
 .preloader.loaded {
@@ -372,7 +378,7 @@ b, strong {
     color: #fff !important;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 5. Header
 /* ---------------------------------------------- */
 
@@ -461,7 +467,7 @@ b, strong {
 
 .navbar-nav .nav-link.active:after {
     opacity: 1;
-    visibility: visible;    
+    visibility: visible;
 }
 
 .navbar-nav .nav-link:after {
@@ -477,12 +483,12 @@ b, strong {
     opacity: 0;
     z-index: 31;
     top: 0;
-    visibility: hidden; 
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -ms-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
+    visibility: hidden;
+    -webkit-transition: all 0.1s ease-in-out 0s;
+    -moz-transition: all 0.1s ease-in-out 0s;
+    -ms-transition: all 0.1s ease-in-out 0s;
+    -o-transition: all 0.1s ease-in-out 0s;
+    transition: all 0.1s ease-in-out 0s;
     box-shadow: 0 0px 20px rgba(46, 82, 177, 0.7);
     background: rgb(55,83,178);
     background: -moz-linear-gradient(135deg, rgba(55,83,178,1) 0%, rgba(130,57,114,1) 100%);
@@ -509,23 +515,25 @@ b, strong {
     -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
     z-index: 999;
-    -webkit-transition: all 0.5s ease-in-out 0s;
-    -moz-transition: all 0.5s ease-in-out 0s;
-    -ms-transition: all 0.5s ease-in-out 0s;
-    -o-transition: all 0.5s ease-in-out 0s;
-    transition: all 0.5s ease-in-out 0s;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s;
     min-width: 290px;
 }
 
 .page-wrapper {
-    width: calc(100% - 290px);
+    position: relative;
+    min-height: 100%;
+    width: calc(100% - 190px);
     float: left;
-    margin-left: 290px;
-    -webkit-transition: all 0.5s ease-in-out 0s;
-    -moz-transition: all 0.5s ease-in-out 0s;
-    -ms-transition: all 0.5s ease-in-out 0s;
-    -o-transition: all 0.5s ease-in-out 0s;
-    transition: all 0.5s ease-in-out 0s;
+    margin-left: 190px;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s;
 }
 
 .nav-wrapper {
@@ -586,7 +594,7 @@ b, strong {
 
 
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 6. Home
 /* ---------------------------------------------- */
 
@@ -670,11 +678,11 @@ b, strong {
     height: 3px;
     border-radius: 1px;
     background: #fff;
-    transition: 1s;
+    transition: 0.2s;
 }
 
 .swiper-home .swiper-slide {
-    transition-duration: 1s;
+    transition-duration: 0.2s;
 }
 
 .section-home #particles-js {
@@ -709,7 +717,7 @@ b, strong {
 }
 
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 6. About
 /* ---------------------------------------------- */
 
@@ -749,7 +757,7 @@ b, strong {
     margin-bottom: 15px;
 }
 
-.about-desc-info span, 
+.about-desc-info span,
 .about-desc-info a {
     font-size: 14px;
     color: #DEDDE0;
@@ -798,7 +806,7 @@ b, strong {
     border-top-color: #2e52b1;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 7. Portfolio
 /* ---------------------------------------------- */
 
@@ -822,11 +830,11 @@ b, strong {
     margin: 5px 10px;
     color: rgba(255,255,255,0.4);
     cursor: pointer;
-    -webkit-transition: all 0.4s ease-in-out 0s;
-    -moz-transition: all 0.4s ease-in-out 0s;
-    -ms-transition: all 0.4s ease-in-out 0s;
-    -o-transition: all 0.4s ease-in-out 0s;
-    transition: all 0.4s ease-in-out 0s;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s;
     box-shadow: 3px 9px 16px rgb(0,0,0,0.4), -3px -3px 10px rgba(255,255,255, 0.06), inset 14px 14px 26px rgb(0,0,0,0.3), inset -3px -3px 15px rgba(255,255,255, 0.05);
     position: relative;
     border-width: 1px 0px 0px 1px;
@@ -865,34 +873,35 @@ b, strong {
     display: block;
     width: 100%;
     height: auto;
-    transition: all 0.3s ease 0s;
+    transition: all 0.2s ease 0s;
 }
 
 .list-items-container .list-item {
-    -webkit-transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
-    -moz-transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
-    -ms-transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
-    -o-transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
-    transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
+    -webkit-transition: opacity 0.2s ease 0s, transform 0.35s ease 0s;
+    -moz-transition: opacity 0.2s ease 0s, transform 0.35s ease 0s;
+    -ms-transition: opacity 0.2s ease 0s, transform 0.35s ease 0s;
+    -o-transition: opacity 0.2s ease 0s, transform 0.35s ease 0s;
+    transition: opacity 0.2s ease 0s, transform 0.35s ease 0s;
 }
 figure {
     margin: 0;
     overflow: hidden;
     position: relative;
     border-radius: 25px;
-    box-shadow: 10px 10px 36px rgb(0,0,0,0.5), -13px -13px 23px rgba(255,255,255, 0.03);
+    box-shadow: 5px 5px 18px rgb(0,0,0,0.5), -13px -13px 23px rgba(255,255,255, 0.03);
 }
 .list-items-container .list-item figcaption {
     background: rgba(0,0,0,0.2);
     bottom: 0;
     left: 0;
-    opacity: 0; 
+    opacity: 0;
     padding: 13px;
     position: absolute;
     right: 0;
     text-align: center;
     top: 0;
-    transition: all 0.3s ease 0s;
+    transition: all 0.1s ease 0s;
+    transition-duration: 0.1s;
 }
 
 .list-items-container .list-item a {
@@ -1021,7 +1030,7 @@ figure {
 }
 
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 8. Services
 /* ---------------------------------------------- */
 
@@ -1046,7 +1055,7 @@ figure {
     text-align: center;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 9. Freelance
 /* ---------------------------------------------- */
 
@@ -1083,7 +1092,7 @@ figure {
     margin-bottom: 60px;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 10. Resume
 /* ---------------------------------------------- */
 
@@ -1146,7 +1155,7 @@ figure {
     z-index: 7;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 11. Testimony
 /* ---------------------------------------------- */
 
@@ -1169,9 +1178,36 @@ figure {
     position: static;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 12. Blog
 /* ---------------------------------------------- */
+
+#blog-wrap {
+  min-height: 100vh;
+}
+
+hr.solid {
+  border-top: 1px solid #bbb;
+  padding-bottom: 20px;
+}
+
+.blog-head h2 {
+  font-size: 50px;
+  z-index: 1;
+  text-transform: uppercase;
+  position: relative;
+  text-align: center;
+
+}
+
+.blog-text {
+  font-size: 20px;
+}
+
+.blog-photo {
+  border-radius: 2%;
+  box-shadow: 2px 2px 10px #000000;
+}
 
 .blog-list {
     max-width: 350px;
@@ -1204,11 +1240,11 @@ figure {
     text-align: center;
     opacity: 0;
     visibility: hidden;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -ms-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
+    -webkit-transition: all 0.1s ease-in-out 0s;
+    -moz-transition: all 0.1s ease-in-out 0s;
+    -ms-transition: all 0.1s ease-in-out 0s;
+    -o-transition: all 0.1s ease-in-out 0s;
+    transition: all 0.1s ease-in-out 0s;
 }
 
 .blog-list:hover .blog-list--details {
@@ -1241,7 +1277,7 @@ figure {
     color: #fff;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 13. Contact
 /* ---------------------------------------------- */
 
@@ -1267,7 +1303,7 @@ figure {
 }
 
 .contact-details--panel a:hover {
-    text-decoration: none;    
+    text-decoration: none;
 }
 
 .form-control {
@@ -1284,11 +1320,11 @@ figure {
     border-color: rgba(255, 255, 255, 0.2);
 }
 
-.section-contact .section-subHead { 
+.section-contact .section-subHead {
     margin: 0;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 14. Footer
 /* ---------------------------------------------- */
 
@@ -1297,7 +1333,7 @@ figure {
     padding: 50px;
 }
 
-/* ---------------------------------------------- 
+/* ----------------------------------------------
 * 15. All Media Queries
 /* ---------------------------------------------- */
 
@@ -1330,7 +1366,7 @@ figure {
         z-index: 1
     }
 
-    .page-wrapper {
+    .../assetsapper {
         width: 100%;
         margin-left: 0%;
         overflow: hidden;
