--- a/assets/css/klee.css
+++ b/assets/css/klee.css
@@ -921,7 +921,6 @@ figure {
 .list-items-container .caption-inner {
     position: absolute;
     left: 0;
-    top: 50%;
     width: 100%;
     margin-top: -20px;
     min-height: 240px;
@@ -932,6 +931,8 @@ figure {
     font-size: 22px;
     font-weight: 500;
     text-shadow: 2px 2px #000000;
+    margin-top: 25%;
+
 }
 
 .caption-inner .portfolio-item-desc {
@@ -1459,3 +1460,37 @@ ul.bullets{
         margin-bottom: 15px;
     }
 }
+
+.gallery {
+    margin: 40px;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-width: 33%;
+    -moz-column-width: 33%;
+    column-width: 33%; }
+    .gallery .pics {
+    -webkit-transition: all 350ms ease;
+    transition: all 350ms ease; }
+    .gallery .animation {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1); }
+    
+    @media (max-width: 450px) {
+    .gallery {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+    }
+    }
+    
+    @media (max-width: 400px) {
+    .btn.filter {
+    padding-left: 1.1rem;
+    padding-right: 1.1rem;
+    }
+    }
