--- a/assets/css/klee.css
+++ b/assets/css/klee.css
@@ -1432,7 +1432,8 @@ ul.bullets{
     } */
 
     .glass {
-        font-size: 8vh;
+        font-size: 7vh;
+        font-weight: 250;
     }
 
     .portfolio-item--img img {
